5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1613_2425.log
== TEST (2019-04-04 18:50:33) 
-- CODE:
distancia = float(input("digite a distancia em km: ")) + "km"
combustivel_gasto = float(input("digite o combustivel em Litros: ")) + "L"
consumo_medio = distancia / combustivel_gasto
print(round(consumo_medio, 3) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    distancia = float(input()) + "km"
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:52:08) 
-- CODE:
distancia = float(input("digite a distancia em km: "))
distancia = distancia + "km"
combustivel_gasto = float(input("digite o combustivel em Litros: ")) 
consumo_medio = distancia / combustivel_gasto
print(round(consumo_medio, 3) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    distancia = distancia + "km"
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:53:49) 
-- CODE:
distancia = float(input("digite a distancia em km: " + "km"))
combustivel_gasto = float(input("digite o combustivel em Litros: ")) 
consumo_medio = distancia / combustivel_gasto
print(round(consumo_medio, 3) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(consumo_medio, 3) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:55:27) 
-- CODE:
distancia = float(input("digite a distancia em km: ")) + " km "
combustivel_gasto = float(input("digite o combustivel em Litros: ")) 
consumo_medio = distancia / combustivel_gasto
print(round(consumo_medio, 3) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    distancia = float(input()) + " km "
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:56:00) 
-- CODE:
distancia = float(input("digite a distancia em km: ")) + km
combustivel_gasto = float(input("digite o combustivel em Litros: ")) 
consumo_medio = distancia / combustivel_gasto
print(round(consumo_medio, 3) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    distancia = float(input()) + km
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:56:24) 
-- CODE:
distancia = float(input("digite a distancia em km: "))
combustivel_gasto = float(input("digite o combustivel em Litros: ")) 
consumo_medio = distancia / combustivel_gasto
print(round(consumo_medio, 3) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(consumo_medio, 3) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:56:53) 
-- CODE:
distancia = float(input("digite a distancia em km: "))
combustivel_gasto = float(input("digite o combustivel em Litros: ")) 
consumo_medio = distancia / combustivel_gasto
print(round(consumo_medio, 3) "km/l")
-- ERROR:
File "XXXX", line 4
    print(round(consumo_medio, 3) "km/l")
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:57:19) 
-- CODE:
distancia = float(input("digite a distancia em km: "))
combustivel_gasto = float(input("digite o combustivel em Litros: ")) 
consumo_medio = distancia / combustivel_gasto
print(round(consumo_medio + "km/l", 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(consumo_medio + "km/l", 3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:57:41) 
-- CODE:
distancia = float(input("digite a distancia em km: "))
combustivel_gasto = float(input("digite o combustivel em Litros: ")) 
consumo_medio = distancia / combustivel_gasto
print(round((consumo_medio)+"km/l", 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round((consumo_medio)+"km/l", 3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:00:38) 
-- CODE:
distancia = float(input("digite a distancia em km: "))
combustivel_gasto = float(input("digite o combustivel em Litros: ")) 
consumo_medio = distancia / combustivel_gasto
print(round(consumo_medio,"km/l", 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(consumo_medio,"km/l", 3))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:02:32) 
-- CODE:
distancia = float(input("digite a distancia em km: "))
combustivel_gasto = float(input("digite o combustivel em Litros: ")) 
consumo_medio = distancia / combustivel_gasto
var = "km/l"
print(round(consumo_medio, 3),var)

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:02:44) 
-- CODE:
distancia = float(input("digite a distancia em km: "))
combustivel_gasto = float(input("digite o combustivel em Litros: ")) 
consumo_medio = distancia / combustivel_gasto
var = "km/l"
print(round(consumo_medio, 3),var)

-- EXECUTION TIME:
0.147512
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
